--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -2,5 +2,6 @@
   font-size: 28px;
   line-height: 36px;
   font-weight: 700;
-  font-family: "TeX Gyre Heros", Arial, sans-serif;
+  font-family: "TeX Gyre Heros", "Arial", sans-serif;
+  letter-spacing: 0.016em;
 }
