--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -1,10 +1,27 @@
 .content {
   position: relative;
-  min-width: 907px;
+  width: 907px;
   min-height: 594px;
   border-radius: 8px;
-  box-shadow: 0 23px 122px 0 rgba(0, 0, 0, 0.35);
   background: url("../img/lines.svg") right -110px top -153px no-repeat,
-              url("../img/circle.svg") left -149px bottom -437px no-repeat,
-              #ffffff;
+    url("../img/circle.svg") left -149px bottom -437px no-repeat,
+    #ffffff;
+
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 44px;
+    right: 45px;
+    bottom: 14px;
+    left: 43px;
+    border-radius: 22px;
+    background-color: #ffffff;
+    box-shadow: 0px 23px 122px 0px rgba(0, 0, 0, 0.35);
+    z-index: -1;
+  }
+}
+
+.content__header {
+  padding-left: 3px;
 }
