--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -8,11 +8,12 @@
   min-height: 100vh;
   font-size: 18px;
   line-height: 30px;
-  font-family: Montserrat, Arial, sans-serif;
+  font-family: "Montserrat", "Arial", sans-serif;
   color: #3d3d3d;
   background-color: #f6f7fb;
+  letter-spacing: 0.01em;
 }
 
 .page__content {
-  padding: 48px 62px;
+  padding: 48px 57px;
 }
